--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content= "Repofinder es una aplicación web que te permite buscar repositorios públicos en GitHub de manera eficiente. Encuentra rápidamente los repositorios que necesitas con Repofinder." >
     <title>Repofnder</title>
   </head>
   <body>
